--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 
 <body>
-    <div class="header">
+
+    <header>
+    <!--<div class="header"> removed-->
+
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+
+        <nav>
+        <!--<div> removed-->
+
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,8 +28,10 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+
+        </nav>
+    </header>
+    
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
