--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 
     <header>
     <!--<div class="header"> removed-->
-
         <h1>Hori<span class="seo">seo</span>n</h1>
-
         <nav>
         <!--<div> removed-->
-
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -28,9 +25,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-
         </nav>
-        
     </header>
 
     <figure></figure>
@@ -38,7 +33,6 @@
 
     <main>
     <!--<div class="content"> removed-->
-
         <section>
         <!--<div class="search-engine-optimization"> removed-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -65,42 +59,46 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
          </section>
-
     </main>
 
     <aside>
    <!-- <div class="benefits"> removed-->
-
-        <div class="benefit-lead">
+        <section>
+        <!--<div class="benefit-lead"> removed-->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+
+        <section>
+        <!--<div class="benefit-brand"> removed-->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+
+        <section>
+        <!--<div class="benefit-cost"> removed-->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </section>
     </aside>
 
-    <div class="footer">
+    <footer>
+    <!--<div class="footer"> removed-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
+
 </body>
 
 </html>
